# COMP7125-Group-Project

./: .env.example  .gitignore  DEVELOPMENT.md  RAG.7z  RAG_EXECUTION_PLAN.md  REACT_IMPLEMENTATION_PLAN.md  README.md  example_usage.py  prompt.md  prompt_engineering  pyproject.toml  quickstart.py  requirements.txt  structure.md
resource/: Qestion for handbooks
src/: __init__.py
src/api/: main.py
src/config/: llm_config.py  tools_config.py
src/core/: __init__.py  react_engine.py
src/rag/: __init__.py
src/tools/: __init__.py  rag_tool.py  schedule_optimizer.py
src/utils/: __init__.py  types.py
tests/: test_react_engine.py
